force-app/main/default/objects/Proposal__c/fields/BFO_ID__c.field-meta.xml
<CustomField>
    <fullName>BFO_ID__c</fullName>
    <label>BFO Opportunity ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>