force-app/main/default/objects/Proposal__c/fields/Export_Checkbox__c.field-meta.xml
<CustomField>
    <fullName>Export_Checkbox__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Export Checkbox</label>
    <type>Checkbox</type>
</CustomField>