force-app/main/default/objects/Proposal__c/fields/Export_Code__c.field-meta.xml
<CustomField>
    <fullName>Export_Code__c</fullName>
    <label>Export Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NONE</fullName>
            </value>
            <value>
                <fullName>Domestic Export</fullName>
            </value>
            <value>
                <fullName>Value1</fullName>
                <isActive>false</isActive>
                <label>Value1</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>