force-app/main/default/objects/Proposal__c/fields/MarketSubSegment__c.field-meta.xml
<CustomField>
    <fullName>MarketSubSegment__c</fullName>
    <label>Market Sub-Segment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Value1</fullName>
            </value>
            <value>
                <fullName>B14</fullName>
            </value>
            <value>
                <fullName>B15</fullName>
            </value>
            <value>
                <fullName>B16</fullName>
            </value>
            <value>
                <fullName>B17</fullName>
            </value>
            <value>
                <fullName>B19</fullName>
            </value>
            <value>
                <fullName>B37</fullName>
            </value>
            <value>
                <fullName>B38</fullName>
            </value>
            <value>
                <fullName>B39</fullName>
            </value>
            <value>
                <fullName>B41</fullName>
            </value>
            <value>
                <fullName>B42</fullName>
            </value>
            <value>
                <fullName>B43</fullName>
            </value>
            <value>
                <fullName>B44</fullName>
            </value>
            <value>
                <fullName>B45</fullName>
            </value>
            <value>
                <fullName>B46</fullName>
            </value>
            <value>
                <fullName>B47</fullName>
            </value>
            <value>
                <fullName>B48</fullName>
            </value>
            <value>
                <fullName>B49</fullName>
            </value>
            <value>
                <fullName>B4A</fullName>
            </value>
            <value>
                <fullName>B52</fullName>
            </value>
            <value>
                <fullName>B53</fullName>
            </value>
            <value>
                <fullName>B90</fullName>
            </value>
            <value>
                <fullName>B91</fullName>
            </value>
            <value>
                <fullName>B93</fullName>
            </value>
            <value>
                <fullName>B94</fullName>
            </value>
            <value>
                <fullName>D10</fullName>
            </value>
            <value>
                <fullName>D11</fullName>
            </value>
            <value>
                <fullName>D90</fullName>
            </value>
            <value>
                <fullName>D91</fullName>
            </value>
            <value>
                <fullName>D92</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>