force-app/main/default/objects/Proposal__c/fields/Project_Location_City__c.field-meta.xml
<CustomField>
    <fullName>Project_Location_City__c</fullName>
    <label>Project Location City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>