force-app/main/default/objects/Proposal__c/fields/Project_Type__c.field-meta.xml
<CustomField>
    <fullName>Project_Type__c</fullName>
    <label>Project Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Close</fullName>
            </value>
            <value>
                <fullName>Agriculture</fullName>
            </value>
            <value>
                <fullName>Amusement</fullName>
            </value>
            <value>
                <fullName>Data Centers/Telecom</fullName>
            </value>
            <value>
                <fullName>Education</fullName>
            </value>
            <value>
                <fullName>Electric Generation-Central</fullName>
            </value>
            <value>
                <fullName>Electric Generation-Distributed</fullName>
            </value>
            <value>
                <fullName>Electric Transmission &amp; Dist.</fullName>
            </value>
            <value>
                <fullName>Hotel/Motel</fullName>
            </value>
            <value>
                <fullName>Industrial- Building</fullName>
            </value>
            <value>
                <fullName>Industrial- Food &amp; Beverage</fullName>
            </value>
            <value>
                <fullName>Industrial- Infrastructure</fullName>
            </value>
            <value>
                <fullName>Industrial- OEM/Machine</fullName>
            </value>
            <value>
                <fullName>Industrial- Process &amp; Control Other</fullName>
            </value>
            <value>
                <fullName>Industrial- Retail Logistics</fullName>
            </value>
            <value>
                <fullName>Jails &amp; Prisons</fullName>
            </value>
            <value>
                <fullName>Marine</fullName>
            </value>
            <value>
                <fullName>Medical</fullName>
            </value>
            <value>
                <fullName>Metals - Mfg/Production/Processing</fullName>
            </value>
            <value>
                <fullName>Minerals - Cement/Glass</fullName>
            </value>
            <value>
                <fullName>Mining</fullName>
            </value>
            <value>
                <fullName>Nuclear</fullName>
            </value>
            <value>
                <fullName>Offices &amp; Banks</fullName>
            </value>
            <value>
                <fullName>Oil&amp;Gas</fullName>
            </value>
            <value>
                <fullName>R &amp; D/Laboratories</fullName>
            </value>
            <value>
                <fullName>Religious</fullName>
            </value>
            <value>
                <fullName>Resi-Apt/Condo 2, 3, 4 Units</fullName>
            </value>
            <value>
                <fullName>Resi-Apt/Condo 5+ Units</fullName>
            </value>
            <value>
                <fullName>Resi-Combo Retail + Apt/Condo</fullName>
            </value>
            <value>
                <fullName>Resi-High Rise Apt/Condo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>